@@ -1,9 +1,9 @@
-package com.weibo.controller;
+package com.it.controller;
 
-import com.weibo.dto.PageResult;
-import com.weibo.dto.Result;
-import com.weibo.entity.Article;
-import com.weibo.service.ArticleService;
+import com.it.common.PageResult;
+import com.it.common.Result;
+import com.it.model.Article;
+import com.it.service.ArticleService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -14,6 +14,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpSession;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * 文章控制器
@@ -64,7 +65,7 @@ public class ArticleController {
             String[] tagIdArray = tagIdsStr.split(",");
             tagIds = Arrays.stream(tagIdArray)
                            .map(Integer::parseInt)
-                           .toList();
+                           .collect(Collectors.toList());
         }
 
         Result<Article> result = articleService.publishArticle(article, tagIds);
@@ -98,7 +99,7 @@ public class ArticleController {
             String[] tagIdArray = tagIdsStr.split(",");
             tagIds = Arrays.stream(tagIdArray)
                            .map(Integer::parseInt)
-                           .toList();
+                           .collect(Collectors.toList());
         }
 
         Result<Article> result = articleService.updateArticle(article, tagIds);
@@ -122,7 +123,7 @@ public class ArticleController {
         HttpSession session = request.getSession();
         Integer userId = (Integer) session.getAttribute("userId");
         if (userId == null) {
-            return Result.fail(401, "请先登录");
+            return Result.error(401, "请先登录");
         }
 
         return articleService.deleteArticle(articleId, userId);
